# msi

./: .clang-format  .travis.yml  CMakeLists.txt  LICENSE  README.md  example-config.sh  mpich3-gcc4.9.2.config.sh  msiConfig.cmake.in  openmpi-gcc4.4.5-complex-config.sh  openmpi-gcc4.4.5-real-config.sh  readme
api/: msi.cc  msi.h  msi_types.h
cdash/: CTestConfig.cmake  nightly.cmake  nightly.sh  scorec-nightly.patch
cmake/: FindBoost.cmake  FindHdf5.cmake  FindLapack.cmake  FindPETSc.cmake  FindPetsc.cmake  FindPetsc.cmake.portalr5  FindScorec.cmake  FindTrilinos.cmake  babbage-FindPetsc.cmake  bob.cmake  cori-FindPetsc.cmake  edison-FindPetsc.cmake  edison-FindTrilinos.cmake  hopper-FindPetsc.cmake  libBoost.pc.in  libHdf5.pc.in  libLapack.pc.in  libMsi.pc.in  libPetsc.pc.in  libTrilinos.pc.in
doc/: MSI.tex  msi-api.tex
include/: msi_las.h  msi_petsc.h  msi_petsc_version.h  msi_solver.h  msi_sync.h  msi_trilinos.h
src/: msi_las.cc  msi_las_api.cc  msi_petsc.cc  msi_solver.cc  msi_sync.cc  msi_trilinos.cc
test/: init.cc  init_subcomm.cc
test/petsc/: main.cc
